build ok after extra logic for page